--- a/app/Resources/views/default/navbar.html.twig
+++ b/app/Resources/views/default/navbar.html.twig
@@ -7,11 +7,11 @@
             <ul class="nav navbar-nav">
                 {# <li class="active"><a href="#">Home</a></li> #}
                 <li><a href="{{ path("admin_product_index") }}">Produit</a></li>
+                <li><a href="{{ path("admin_unit_index") }}">Unités</a></li>
                 <li><a href="{{ path("admin_ingredient_index") }}">Ingredient</a></li>
-                <li><a href="{{ path("admin_npi_index") }}">Recette/NPI</a></li>
+                <li><a href="{{ path("admin_productingredient_index") }}">Recette/ProductIngredient</a></li>
                 <li><a href="{{ path("admin_purchase_index") }}">Commande/Purchase</a></li>
                 <li><a href="{{ path("admin_purchaseproduct_index") }}">Historique des commandesPurchase Product</a></li>
-                <li><a href="{{ path("admin_unit_index") }}">Unités</a></li>
                 <li><a href="{{ path("admin_user_index") }}">Utilisateur</a></li>
             </ul>
             
