--- a/app/Resources/views/productingredient/new.html.twig
+++ b/app/Resources/views/productingredient/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Npi creation</h1>
+    <h1>Productingredient creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('admin_npi_index') }}">Back to the list</a>
+            <a href="{{ path('admin_productingredient_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
