--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -7,6 +7,8 @@
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Pseudo</th>
+                <th>Email</th>
                 <th>Firstname</th>
                 <th>Lastname</th>
                 <th>Phonenumber</th>
@@ -19,6 +21,8 @@
         {% for user in users %}
             <tr>
                 <td><a href="{{ path('admin_user_show', { 'id': user.id }) }}">{{ user.id }}</a></td>
+                <td>{{ user.username }}</td>
+                <td>{{ user.email }}</td>
                 <td>{{ user.firstName }}</td>
                 <td>{{ user.lastName }}</td>
                 <td>{{ user.phoneNumber }}</td>
