--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -10,6 +10,14 @@
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
+                <th>Pseudo</th>
+                <td>{{ user.username }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ user.email }}</td>
+            </tr>
+            <tr>
                 <th>Firstname</th>
                 <td>{{ user.firstName }}</td>
             </tr>
